1st project demo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
-    <title>one</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,user-scalable=no"><title>「ONE · 一个」</title><link href=./static/css/app.04f97e1cca1efec2db4006726449c932.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.b6f861acb137d63e0a33.js></script><script type=text/javascript src=./static/js/vendor.48346360482b0154433d.js></script><script type=text/javascript src=./static/js/app.ab1f7e476bf90b23df4d.js></script></body></html>
